# outlier-x

./: .gitignore  COPILOT_PROMPT.md  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: TEST_COVERAGE_ANALYSIS.md  TEST_IMPLEMENTATION_ROADMAP.md
examples/: sample_data.csv  sample_data.json
src/: __init__.py  config.py  ingest.py  main.py  normalize.py  report.py  validate.py
src/outlier_x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: __init__.py  constants.py  decorators.py  errors.py  logger.py
tests/: __init__.py  test_cli.py  test_config.py  test_decorators.py  test_ingest.py  test_main.py  test_normalize.py  test_report.py  test_validate.py
tests/fixtures/: __init__.py  sample_fresh.json  sample_malformed.json  sample_stale.csv
